# projector

./: .gitignore  Cargo.toml  README.md
creator/: Cargo.toml
creator/src/: lib.rs  main.rs
src/: cli.rs  main.rs
template_parser/: Cargo.toml
template_parser/src/: entities.rs  lib.rs
templates/: template_go.yaml
templates/template_go_files/: main.templ
